Os comentários foram adicionados.

--- a/PROB-Patricia_Sayonara.ipynb
+++ b/PROB-Patricia_Sayonara.ipynb
@@ -1795,8 +1795,7 @@
     }
    ],
    "source": [
-    "#À esquerda estão as linhas em que se encontram os dados relacionados aos 5 sorteios em que se tiveram a maior quantidade de \n",
-    "# vencedores da Mega-Sena\n",
+    "#À esquerda estão as linhas em que se encontram as linhas do dataset em que estão os dados relacionados aos 5 sorteios em que se tiveram a maior quantidade de vencedores da Mega-Sena\n",
     "data[data['Data Sorteio'] >= '2010-01-01']['Ganhadores_Sena'].sort_values(ascending=False)[0:5]"
    ]
   },
